deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  labels:
    app: test-bigip-controller-1
  name: test-bigip-controller-1
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-bigip-controller-1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-bigip-controller-1
    spec:
      containers:
      - args:
        - --bigip-partition
        - test
        - --bigip-url
        - 172.16.2.44
        - --bigip-username
        - admin
        - --bigip-password
        - admin
        - --verify-interval
        - "30"
        - --node-poll-interval
        - "30"
        - --flannel-name
        - /test/vxlan-tunnel-mp
        - --pool-member-type
        - cluster
        command:
        - /app/bin/k8s-bigip-ctlr
        image: f5networksdevel/k8s-bigip-ctlr:devel-master
        imagePullPolicy: Always
        name: test-bigip-controller-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: bigip-controller
      serviceAccountName: bigip-controller
      terminationGracePeriodSeconds: 30
