test-fanout-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-%NAME
  annotations:
     'virtual-server.f5.com/ip': '%IP'
     'virtual-server.f5.com/health': |
      [
        {
          "path":     "%HOST/",
          "send":     "HTTP GET /",
          "interval": 5,
          "timeout":  10
        }
      ]
spec:
  rules:
  - host: %HOST
    http:
      paths:
      - path: /
        backend:
          serviceName: test-%NAME
          servicePort: 80
